@@ -1,3 +1,8 @@
+2006-07-30  Roger Sayle  <roger@eyesopen.com>
+
+	* include/ext/codevt_specializations.h (__iconv_adaptor): Use
+	identifier _Tp instead of _T in template argument to avoid conflict.
+
 2006-07-30  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/stl_algo.h (stable_sort): Uglify the buf variable.
